load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "modserver",
    srcs = [
        "agent_rpc_api.go",
        "api.go",
        "rpc_api.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/internal/module/modserver",
    visibility = [
        "//cmd/kas:__subpackages__",
        "//internal/module/agent_configuration/server:__subpackages__",
        "//internal/module/agent_registrar/server:__subpackages__",
        "//internal/module/agent_tracker/server:__subpackages__",
        "//internal/module/configuration_project/rpc:__subpackages__",
        "//internal/module/configuration_project/server:__subpackages__",
        "//internal/module/flux/server:__subpackages__",
        "//internal/module/gitlab_access/server:__subpackages__",
        "//internal/module/gitops/server:__subpackages__",
        "//internal/module/google_profiler/server:__subpackages__",
        "//internal/module/kubernetes_api/server:__subpackages__",
        "//internal/module/notifications/rpc:__subpackages__",
        "//internal/module/notifications/server:__subpackages__",
        "//internal/module/observability/server:__subpackages__",
        "//internal/module/reverse_tunnel/server:__subpackages__",
        "//internal/module/reverse_tunnel/test:__subpackages__",
        "//internal/module/usage_metrics/server:__subpackages__",
        "//internal/tool/testing/mock_modserver:__subpackages__",
    ],
    deps = [
        "//internal/api",
        "//internal/gitaly",
        "//internal/gitlab",
        "//internal/module/modshared",
        "//internal/module/observability",
        "//internal/module/usage_metrics",
        "//internal/tool/syncz",
        "//pkg/event",
        "//pkg/kascfg",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//:go-grpc-middleware",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_redis_rueidis//:rueidis",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:grpc",
        "@org_uber_go_zap//:zap",
    ],
)
