load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build:proto.bzl", "go_proto_generate")

go_proto_generate(
    src = "modshared.proto",
    workspace_relative_target_directory = "internal/module/modshared",
)

go_library(
    name = "modshared",
    srcs = [
        "api.go",
        "modshared.pb.go",
        "rpc_api_stub.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v15/internal/module/modshared",
    visibility = [
        "//cmd/agentk:__subpackages__",
        "//cmd/kas:__subpackages__",
        "//internal/module/agent_configuration/rpc:__subpackages__",
        "//internal/module/agent_configuration/server:__subpackages__",
        "//internal/module/agent_tracker:__pkg__",
        "//internal/module/agent_tracker/server:__subpackages__",
        "//internal/module/cilium_alert/agent:__subpackages__",
        "//internal/module/configuration_project/rpc:__subpackages__",
        "//internal/module/configuration_project/server:__subpackages__",
        "//internal/module/gitlab_access/server:__subpackages__",
        "//internal/module/gitops/agent:__subpackages__",
        "//internal/module/gitops/server:__subpackages__",
        "//internal/module/google_profiler/server:__subpackages__",
        "//internal/module/kubernetes_api/agent:__subpackages__",
        "//internal/module/kubernetes_api/server:__subpackages__",
        "//internal/module/modagent:__subpackages__",
        "//internal/module/modserver:__subpackages__",
        "//internal/module/observability:__pkg__",
        "//internal/module/observability/agent:__subpackages__",
        "//internal/module/observability/server:__subpackages__",
        "//internal/module/reverse_tunnel/agent:__subpackages__",
        "//internal/module/reverse_tunnel/server:__subpackages__",
        "//internal/module/reverse_tunnel/test:__subpackages__",
        "//internal/module/usage_metrics/server:__subpackages__",
        "//internal/tool/testing/mock_modagent:__subpackages__",
        "//internal/tool/testing/mock_modserver:__subpackages__",
    ],
    deps = [
        "//internal/tool/grpctool",
        "//internal/tool/retry",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_uber_go_zap//:zap",
    ],
)
