load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "observability",
    srcs = [
        "api.go",
        "metric_server.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v15/internal/module/observability",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/module/modshared",
        "//internal/tool/httpz",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@org_uber_go_zap//:zap",
    ],
)

go_custom_test(
    name = "observability_test",
    srcs = ["metric_server_test.go"],
    deps = [
        ":observability",
        "//internal/module/modshared",
        "//internal/tool/testing/mock_modserver",
        "@com_github_golang_mock//gomock",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_zap//zaptest",
    ],
)
