load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "reverse_tunnel",
    srcs = [
        "api.go",
        "doc.go",
        "tunnel.go",
        "tunnel_registry.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/internal/module/reverse_tunnel",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api",
        "//internal/module/reverse_tunnel/info",
        "//internal/module/reverse_tunnel/rpc",
        "//internal/module/reverse_tunnel/tracker",
        "//internal/tool/errz",
        "//internal/tool/grpctool",
        "//internal/tool/logz",
        "//internal/tool/prototool",
        "@org_golang_google_genproto_googleapis_rpc//status",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_uber_go_zap//:zap",
    ],
)

go_custom_test(
    name = "reverse_tunnel_test",
    srcs = [
        "mock_for_test.go",
        "tunnel_registry_test.go",
        "tunnel_test.go",
    ],
    embed = [":reverse_tunnel"],
    deps = [
        "//internal/module/reverse_tunnel/info",
        "//internal/module/reverse_tunnel/rpc",
        "//internal/tool/grpctool",
        "//internal/tool/prototool",
        "//internal/tool/testing/matcher",
        "//internal/tool/testing/mock_modserver",
        "//internal/tool/testing/mock_reverse_tunnel_rpc",
        "//internal/tool/testing/mock_reverse_tunnel_tracker",
        "//internal/tool/testing/mock_rpc",
        "//internal/tool/testing/mock_tool",
        "//internal/tool/testing/testhelpers",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_k8s_apimachinery//pkg/util/wait",
        "@org_golang_google_genproto_googleapis_rpc//status",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_uber_go_mock//gomock",
        "@org_uber_go_zap//zaptest",
    ],
)
