load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "usage_metrics",
    srcs = ["api.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/internal/module/usage_metrics",
    visibility = ["//:__subpackages__"],
)

go_custom_test(
    name = "usage_metrics_test",
    srcs = ["api_test.go"],
    embed = [":usage_metrics"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_stretchr_testify//require",
    ],
)
