load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cache",
    srcs = [
        "cache.go",
        "cache_with_err.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/internal/tool/cache",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/tool/syncz",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)

go_custom_test(
    name = "cache_test",
    srcs = [
        "cache_test.go",
        "cache_with_err_test.go",
    ],
    embed = [":cache"],
    deps = [
        "//internal/tool/testing/mock_cache",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
