load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build:build.bzl", "go_custom_test")

go_library(
    name = "git",
    srcs = ["git.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v14/internal/tool/git",
    visibility = ["//:__subpackages__"],
)

go_custom_test(
    name = "git_test",
    srcs = ["git_test.go"],
    embed = [":git"],
    deps = ["@com_github_stretchr_testify//require"],
)
