load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "httpz",
    srcs = [
        "conn_wrappers.go",
        "rate_limiter.go",
        "roundtripper.go",
        "run_server.go",
        "tools.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/internal/tool/httpz",
    visibility = ["//:__subpackages__"],
    deps = ["@io_k8s_apimachinery//third_party/forked/golang/netutil"],
)

go_custom_test(
    name = "httpz_test",
    srcs = [
        "conn_wrappers_test.go",
        "roundtripper_test.go",
    ],
    embed = [":httpz"],
    deps = [
        "//internal/tool/testing/mock_stdlib",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_k8s_apimachinery//pkg/util/wait",
    ],
)
