load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logz",
    srcs = [
        "helpers.go",
        "logz.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v15/internal/tool/logz",
    visibility = ["//:__subpackages__"],
    deps = [
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
