load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build:proto.bzl", "go_proto_generate")

go_proto_generate(
    src = "redistool.proto",
    workspace_relative_target_directory = "internal/tool/redistool",
)

go_library(
    name = "redistool",
    srcs = [
        "doc.go",
        "expiring_hash.go",
        "redistool.pb.go",
        "token_limiter.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v15/internal/tool/redistool",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/tool/logz",
        "@com_github_go_redis_redis_v8//:redis",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_zap//:zap",
    ],
)

go_custom_test(
    name = "redistool_test",
    srcs = [
        "expiring_hash_test.go",
        "mock_for_test.go",
        "token_limiter_test.go",
    ],
    embed = [":redistool"],
    deps = [
        "//internal/api",
        "//internal/tool/testing/testhelpers",
        "@com_github_go_redis_redis_v8//:redis",
        "@com_github_go_redis_redismock_v8//:redismock",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//proto",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zaptest",
    ],
)
