load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build:proto.bzl", "go_proto_generate")

go_proto_generate(
    src = "redistool.proto",
)

go_library(
    name = "redistool",
    srcs = [
        "doc.go",
        "err_cacher.go",
        "expiring_hash.go",
        "expiring_hash_api.go",
        "expiring_hash_api_set_builder.go",
        "redistool.go",
        "redistool.pb.go",
        "token_limiter.go",
        "transaction.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/internal/tool/redistool",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/tool/errz",
        "//internal/tool/logz",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_redis_rueidis//:rueidis",
        "@io_k8s_utils//clock",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_zap//:zap",
    ],
)

go_custom_test(
    name = "redistool_test",
    srcs = [
        "err_cacher_test.go",
        "expiring_hash_api_set_builder_test.go",
        "expiring_hash_test.go",
        "mock_for_test.go",
        "token_limiter_test.go",
    ],
    embed = [":redistool"],
    deps = [
        "//internal/api",
        "//internal/tool/testing/matcher",
        "//internal/tool/testing/mock_tool",
        "//internal/tool/testing/testhelpers",
        "//internal/tool/tlstool",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_redis_rueidis//:rueidis",
        "@com_github_redis_rueidis//mock",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_k8s_utils//clock/testing",
        "@org_golang_google_protobuf//proto",
        "@org_uber_go_mock//gomock",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zaptest",
    ],
)
