load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "retry",
    srcs = [
        "retry.go",
        "single_run.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v15/internal/tool/retry",
    visibility = ["//:__subpackages__"],
    deps = [
        "@io_k8s_apimachinery//pkg/util/wait",
        "@io_k8s_utils//clock",
    ],
)
