load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "retry",
    srcs = ["retry.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v15/internal/tool/retry",
    visibility = ["//:__subpackages__"],
    deps = [
        "@io_k8s_apimachinery//pkg/util/wait",
        "@io_k8s_utils//clock",
    ],
)

go_custom_test(
    name = "retry_test",
    srcs = ["retry_test.go"],
    embed = [":retry"],
    deps = [
        "@com_github_stretchr_testify//require",
        "@io_k8s_utils//clock",
    ],
)
