load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "syncz",
    srcs = [
        "mutex.go",
        "striped.go",
        "subscriptions.go",
        "worker.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/internal/tool/syncz",
    visibility = ["//:__subpackages__"],
    deps = [
        "@io_k8s_apimachinery//pkg/util/wait",
        "@org_golang_google_protobuf//proto",
    ],
)

go_custom_test(
    name = "syncz_test",
    srcs = [
        "striped_test.go",
        "subscriptions_test.go",
        "worker_test.go",
    ],
    embed = [":syncz"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@io_k8s_apimachinery//pkg/util/wait",
    ],
)
