load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gittest",
    srcs = ["pktline.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v15/internal/gitaly/copied/gittest",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/gitaly/copied/pktline",
        "@com_github_stretchr_testify//require",
    ],
)
