load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build:build.bzl", "go_custom_test")

go_library(
    name = "agent",
    srcs = [
        "factory.go",
        "module.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/internal/module/agent_registrar/agent",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/module/agent_registrar",
        "//internal/module/agent_registrar/rpc",
        "//internal/module/modagent",
        "//internal/module/modshared",
        "//internal/tool/grpctool",
        "//internal/tool/logz",
        "//internal/tool/retry",
        "//pkg/agentcfg",
        "//pkg/entity",
        "@org_uber_go_zap//:zap",
    ],
)

go_custom_test(
    name = "agent_test",
    srcs = ["module_test.go"],
    embed = [":agent"],
    deps = [
        "//internal/module/agent_registrar/rpc",
        "//internal/tool/mathz",
        "//internal/tool/testing/mock_agent_registrar",
        "//internal/tool/testing/testhelpers",
        "//pkg/entity",
        "@org_golang_google_grpc//:grpc",
        "@org_uber_go_mock//gomock",
        "@org_uber_go_zap//zaptest",
    ],
)
