load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build:build.bzl", "go_custom_test")

go_library(
    name = "server",
    srcs = [
        "factory.go",
        "module.go",
        "server.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/internal/module/agent_registrar/server",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/module/agent_registrar",
        "//internal/module/agent_registrar/rpc",
        "//internal/module/agent_tracker",
        "//internal/module/modserver",
        "//internal/module/modshared",
        "//internal/tool/mathz",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_custom_test(
    name = "server_test",
    srcs = ["server_test.go"],
    embed = [":server"],
    deps = [
        "//internal/api",
        "//internal/module/agent_registrar/rpc",
        "//internal/module/agent_tracker",
        "//internal/module/modserver",
        "//internal/tool/testing/mock_agent_tracker",
        "//internal/tool/testing/mock_modserver",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_uber_go_mock//gomock",
        "@org_uber_go_zap//zaptest",
    ],
)
